# gobindtest

./: .gitignore  README.md  build.gradle.kts  go.mod  go.sum  gradle.properties  local.properties  project.properties  settings.gradle.kts  versions.properties
android/: build.gradle.kts
android/src/androidTest/java/danbroid/kipfs/jni/: ExampleInstrumentedTest.kt
android/src/main/: .gitignore  AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  hello.c  jni.cpp
android/src/main/java/danbroid/kipfs/jni/: KIPFS.kt
android/src/main/jniLibs/x86/: libgobindtest.h
android/src/test/java/danbroid/kipfs/jni/: ExampleUnitTest.kt
buildSrc/src/main/kotlin/: ProjectVersions.kt
core/: misc.go
core/hello/: hello.go
core/misc/: misc.go
docker/: env.sh
docker/debian/: Dockerfile  build.sh  run.sh
docker/docker/: run.sh  run2.sh
docker/ipfsmobile/: run.sh  run2.sh
docker/kipfs/: Dockerfile  build.sh  run.sh
docker/kipfs/root/: setup.sh
docker/kipfs/root/home/kipfs/: .bashrc
go/: go.mod
go/core/: node.go  repo.go
go/core/hello/: hello.go
go/node/: node.go  repo.go
go/test1/: build.sh  ctest.sh  node.go  repo.go  test1.go
go/test1/c/: test.c
jvm/: build.gradle.kts  run.sh
jvm/libs/: CMakeCache.txt  Makefile  cmake_install.cmake
jvm/src/main/c/: CMakeLists.txt  test.c
jvm/src/main/java/danbroid/kipfs/jni/: KIPFS.java  KIPFS.kt  NativeLoader.kt  Test.java
jvm/src/test/kotlin/danbroid/kipfs/test/: Test.kt
jvmtest/: build.gradle.kts
jvmtest/src/main/java/danbroid/gobindtest/: Main.kt
lib/: build.gradle.kts
lib/src/commonMain/kotlin/danbroid/gobind/: Main.kt
lib/src/jvmMain/java/danbroid/gobindtest/: NativeLoader.kt
lib/src/jvmMain/java/go/: Universe.java  error.java
lib/src/linuxArm64Main/: gobind.def
lib/src/linuxX64Main/kotlin/: Main.kt
lib/src/nativeInterop/cinterop/: gobind.def
lib/src/nativeMain/kotlin/: Main.kt
misc/: misc.go
openssl/: common.sh  linux.sh  linux_arm64.sh  win32.sh
scripts/: build_android.sh  build_jni.sh  build_jvm.sh  common.sh  gobuild.sh  gobuild2.sh  gobuild_native.sh  publish.sh  runAndroidTest.sh
test1/: .gitignore  build.sh  build_jni.sh  build_shared.sh  core.go  ctest.sh  hello.c  jni.c  main.go  shell.go  test1.go
test1/c/: test.c
test2/: test.go
test2/stuff/: stuff.go
(+4 files in other folders)
